after commenting out #git config --global user.nam

--- a/settings.ini
+++ b/settings.ini
@@ -9,7 +9,7 @@ keywords = nbdev
 user = uwesterr
 author = uwesterr
 author_email = „uwe.sterr@st2c.de
-git config --global user.name „napon123
+#git config --global user.name napon123
 repo = nbdevFirstTry
 branch = main
 version = 0.0.1
