after nbdev_docs command

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,9 +1,8 @@
-
 ipynb-filters: [nbdev_filter]
 
 project:
   type: website
-  output-dir: docs
+  output-dir: _docs
   preview:
     port: 3000
     browser: false
@@ -15,23 +14,25 @@ format:
     toc: true
 
 website:
-  title: "nbdev"
+  title: "nbdevFirstTry"
+  description: "first project using nbdev"
+  execute: 
+    enabled: false
   twitter-card: true
+  open-graph: true
   reader-mode: true
-  repo-branch: master
-  repo-url: https://github.com/fastai/nbdev
+  repo-branch: main
+  repo-url: https://github.com/uwesterr/nbdevFirstTry/
   repo-actions: [issue]
   navbar:
     background: primary
     search: true
-    left:
-      - text: Home
-        file: index.ipynb
     right:
       - icon: github
-        href: https://github.com/fastai/nbdev/
+        href: https://github.com/uwesterr/nbdevFirstTry/
   sidebar:
     style: "floating"
 
 metadata-files: 
   - sidebar.yml
+  - custom.yml
