added numpy as dev_requirements

--- a/settings.ini
+++ b/settings.ini
@@ -18,6 +18,7 @@ audience = Developers
 language = English
 custom_sidebar = False
 license = apache2
+dev_requirements = numpy
 status = 2
 nbs_path = .
 doc_path = _docs
