--- a/settings.ini
+++ b/settings.ini
@@ -18,7 +18,7 @@ audience = Developers
 language = English
 custom_sidebar = False
 license = apache2
-requirements = numpy
+requirements = numpy matplotlib
 status = 2
 nbs_path = .
 doc_path = _docs
