added requirements = numpy matplotlib

--- a/settings.ini
+++ b/settings.ini
@@ -20,6 +20,7 @@ custom_sidebar = False
 license = apache2
 status = 2
 nbs_path = .
+requirements = numpy matplotlib
 doc_path = _docs
 recursive = False
 tst_flags = notest
