--- a/settings.ini
+++ b/settings.ini
@@ -8,7 +8,7 @@ copyright = Put your copyright info here
 keywords = nbdev
 user = uwesterr
 author = uwesterr
-author_email = „uwe.sterr@st2c.de
+author_email = uwe.sterr@st2c.de
 #git config --global user.name napon123
 repo = nbdevFirstTry
 branch = main
